# retail-data-quality-tool

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
docs/: PORTFOLIO_NOTES.md  README.md
scripts/: make_sample_data.py  run_dq.py
src/retail_dq/: __init__.py  mapping.py  report.py  rules.py  runner.py  utils.py
tests/: test_smoke.py
