[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-dq-toolkit"
version = "0.1.0"
description = "Invoice-line data quality checks + Excel reporting (portfolio project)"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0", "openpyxl>=3.1", "python-dateutil>=2.9"]
